--- a/locales/en.json
+++ b/locales/en.json
@@ -1,35 +1,35 @@
 {
-  "messagePrompt": "Send a public message",
-  "pleaseWait": "Sending, please wait!",
-  "notAllowed": "Not allowed",
-  "notFound": "Not found",
-  "somethingBroke": "Something broke",
-  "backToChat": "Back to chat!",
-  "pageTitle": "Meatspace chat: your 2 seconds of fame.",
-  "welcome": "Welcome to Meatspace Chat!",
-  "poweredByDO": "Powered by Digital Ocean! THEY ARE THE BEST.",
-  "forContributors": "For the Contributors",
-  "contributorCopy": "Sending a fix to the repo? (No new features please)",
-  "githubRepo": "GitHub Repository",
-  "forHackers": "For the Hackers",
-  "hackerCopy": "New features/ideas/hacks that use the web version of the chat?",
-  "addItHere": "Add it here!",
-  "forAPIDevs": "For the API Developers",
-  "devsCopy": "Want to do a third-party client/bot/whatever using the API?",
-  "moreInfoHere": "More info here",
-  "forConsumers": "For the Consumers",
-  "meatspaceShop": "Meatspace Shop",
-  "forCredits": "For the Credits",
-  "info!": "Info!",
-  "unmute": "Unmute",
-  "mute": "Mute",
-  "ban": "Ban",
-  "termsAndConditions": "Please read and accept the Terms and Conditions before continuing with Meatspace chat.",
-  "iAccept": "I accept",
-  "iDoNotAccept": "I do not accept",
-  "termsLink": "Terms and Conditions",
-  "browserWarningString": "Your browser is not letting you have the full Meatspace experience!",
-  "browserWarningSubtext": "You will be able to see other peoples chats, but unable to post your own. Consider trying one of the browsers below, or continue on and just watch!",
-  "okay": "Okay",
-  "switchCamera": "Switch camera"
+    "addItHere": "Add it here!",
+    "backToChat": "Back to chat!",
+    "ban": "Ban",
+    "browserWarningString": "Your browser is not letting you have the full Meatspace experience!",
+    "browserWarningSubtext": "You will be able to see other peoples chats, but unable to post your own. Consider trying one of the browsers below, or continue on and just watch!",
+    "contributorCopy": "Sending a fix to the repo? (No new features please)",
+    "devsCopy": "Want to do a third-party client/bot/whatever using the API?",
+    "forAPIDevs": "For the API Developers",
+    "forConsumers": "For the Consumers",
+    "forContributors": "For the Contributors",
+    "forCredits": "For the Credits",
+    "forHackers": "For the Hackers",
+    "githubRepo": "GitHub Repository",
+    "hackerCopy": "New features/ideas/hacks that use the web version of the chat?",
+    "iAccept": "I accept",
+    "iDoNotAccept": "I do not accept",
+    "info!": "Info!",
+    "meatspaceShop": "Debian Shop",
+    "messagePrompt": "Send a public message",
+    "moreInfoHere": "More info here",
+    "mute": "Mute",
+    "notAllowed": "Not allowed",
+    "notFound": "Not found",
+    "okay": "Okay",
+    "pageTitle": "Debian-Meatspace chat: your 2 seconds of fame.",
+    "pleaseWait": "Sending, please wait!",
+    "poweredByDO": "Powered by the nsa! THEY ARE THE BEST.",
+    "somethingBroke": "Something broke",
+    "switchCamera": "Switch camera",
+    "termsAndConditions": "Please read and accept the Terms and Conditions before continuing with Debian-Meatspace chat.",
+    "termsLink": "Terms and Conditions",
+    "unmute": "Unmute",
+    "welcome": "Welcome to Debian-Meatspace Chat!"
 }
